--- a/index.css
+++ b/index.css
@@ -145,7 +145,7 @@ h5{
     padding: 10px 10px;
   }
 
-  @media screen and (max-width: 600px){
+  @media screen and (max-width: 768px){
     nav{
         
         display: flex;
@@ -182,4 +182,19 @@ h5{
 .icon-menu{
     height: 0;
     overflow: hidden;
+}
+
+@media screen and (max-width: 480px) {
+    main{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    section{
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+    }
 }
